<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/bsecure_logo" >
    </ImageView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/transparent_bg"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/sigup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:paddingBottom="10dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/fname"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/cmts_bg"
                android:digits="ABCDEFGHIKJLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="36"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/lname"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/cmts_bg"
                android:digits="ABCDEFGHIKJLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="36"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/uname"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/cmts_bg"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@-_.1234567890"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="64"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/ceid"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_ceid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/cmts_bg"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@-_.1234567890"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="64"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/cmts_bg"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="16"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/password_agian"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_passwordAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/cmts_bg"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="16"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/city"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_city"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/cmts_bg"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:inputType="text"
                android:maxLength="36"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/gray" />

            <TextView
                android:id="@+id/tv_RegisterSubmit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/template_bt_red_bg"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>